Working on auth. Created mailer/mail module
